[gd_scene load_steps=4 format=3 uid="uid://bj8dk0h6fwi7r"]

[ext_resource type="Script" uid="uid://d1wmg6pxiuvlu" path="res://quizzes/common/ans_box.gd" id="4_ihrbx"]
[ext_resource type="Texture2D" uid="uid://bi2wcvtgse8gn" path="res://quizzes/common/border9patch.png" id="5_dd0s6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exx66"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.13725491, 0.13725491, 0.13725491, 0.5882353)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[node name="ans_box" type="TextureButton"]
offset_right = 250.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2
toggle_mode = true
keep_pressed_outside = true
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_ihrbx")

[node name="Txt_answer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_exx66")

[node name="Bg_black" type="ColorRect" parent="Txt_answer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.13725491, 0.13725491, 0.13725491, 1)

[node name="Label" type="Label" parent="Txt_answer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.05
anchor_right = 0.96
anchor_bottom = 0.93
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -2
theme_override_font_sizes/font_size = 20
text = "απάντηση"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Low_contrast" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.78431374, 0.78431374, 0.78431374, 0.3137255)

[node name="Boarder" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_dd0s6")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="EnergyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -50.0
offset_right = 125.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.34906584
pivot_offset = Vector2(125, 50)
theme_override_colors/font_outline_color = Color(0, 0.78431374, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 60
text = "20PJ⚡"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
